--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.9.1
   math_expressions: ^2.6.0
+  # audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
