--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/paper.png
+    - assets/images/rock.png
+    - assets/images/scissor.png
